--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mocha": "^10.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
