--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mocha": "^10.6.0"
+    "express-validator": "^7.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "mocha": "^10.6.0"
   }
 }
