--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
     "express-validator": "^7.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4",
-    "mocha": "^10.6.0"
+    "@eslint/js": "^9.7.0",
+    "eslint": "^9.7.0",
+    "globals": "^15.8.0",
+    "mocha": "^10.6.0",
+    "nodemon": "^3.1.4"
   }
 }
