--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
+    "chai": "^5.1.1",
     "eslint": "^9.7.0",
     "globals": "^15.8.0",
     "mocha": "^10.6.0",
