--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-validator": "^7.1.0"
+    "express-validator": "^7.1.0",
+    "yahoo-finance2": "^2.11.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
