--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.5",
     "@mui/x-charts": "^7.13.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@supabase/supabase-js": "^2.45.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
