--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-charts": "^7.13.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@supabase/supabase-js": "^2.45.1",
+    "@vercel/analytics": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
